# outbreak-traceability-sim

./: .dockerignore  .env.example  .env.hosted.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  config.ts  export.ts  monteCarlo.ts  simulation.ts  types.ts
frontend/src/components/comparison/: ComparisonView.tsx  MetricsComparison.tsx  ScopeChart.tsx
frontend/src/components/dashboard/: CaseSummaryDashboard.tsx  EpiCurve.tsx  MetricCard.tsx  ResultsDashboard.tsx
frontend/src/components/investigation/: CertaintyIndicator.tsx  ConvergenceDisplay.tsx  FarmTracebackMetrics.tsx  InvestigationGraph.tsx  (+2 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: AboutPage.tsx  ComparisonPage.tsx  InvestigationPage.tsx  MonteCarloPage.tsx  SimulationPage.tsx  UserGuidePage.tsx
frontend/src/store/: configStore.ts  index.ts  investigationStore.ts  monteCarloStore.ts  networkStore.ts  simulationStore.ts  uiStore.ts
frontend/src/utils/: pdfExport.ts
outbreak_traceability_sim/: __init__.py
outbreak_traceability_sim/api/: __init__.py  config.py  main.py
outbreak_traceability_sim/api/routes/: export.py  investigation.py  monte_carlo.py  network.py  simulation.py
outbreak_traceability_sim/api/schemas/: __init__.py  investigation.py  monte_carlo.py  network.py  simulation.py
outbreak_traceability_sim/api/services/: export_service.py  monte_carlo_service.py  simulation_service.py
outbreak_traceability_sim/models/: __init__.py  base.py  events.py  lots.py  nodes.py
outbreak_traceability_sim/simulation/: __init__.py  contamination.py  exposure.py  flow.py  investigation.py  monte_carlo.py  network.py  runner.py  timing.py
outbreak_traceability_sim/visualization/: __init__.py
tests/: __init__.py  test_models.py
(+15 files in other folders)
