[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outbreak-traceability-sim"
version = "0.1.0"
description = "FDA FSMA 204 food traceability simulation comparing full compliance vs calculated lot codes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Partnership for Food Traceability" }
]
keywords = [
    "fsma",
    "fda",
    "food-safety",
    "traceability",
    "supply-chain",
    "simulation",
    "outbreak-investigation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.0.0",
    "openpyxl>=3.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "plotly>=5.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "outbreak-traceability-sim[web,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/partnership-for-food-traceability/outbreak-traceability-sim"

[tool.hatch.build.targets.wheel]
packages = ["outbreak_traceability_sim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=outbreak_traceability_sim"
